--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+/* Importar estilos de PrimeIcons */
+@import "primeicons/primeicons.css";
+
+/* Importar estilos de PrimeFlex */
+@import "primeflex/primeflex.css";
+
+@import "tailwindcss";
