Se realizo el dashboard Utilizando Angular + PrimeNg crear las siguientes vistas: Login Home/Dashboard

--- a/src/app/pages/auth/home/home.component.html
+++ b/src/app/pages/auth/home/home.component.html
@@ -1,9 +1,8 @@
 <div class="login-container">
   <div class="login-content">
-    <div class="logo-container">
+    <!-- <div class="logo-container">
       <img src="assets/logo.png" alt="Logo" class="logo" />
-    </div>
-
+    </div>-->
     <button pButton
             label="Iniciar Sesión"
             class="login-btn p-button-rounded p-button-lg p-button-secondary"
