--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-container">
-  <div class="login-overlay">
+  <!-- <div class="login-overlay">
     <img src="assets/logo.png" alt="Papeleria Logo" class="logo" />
-  </div>
+  </div>-->
   <div class="login-card">
     <div class="card-content">
       <div class="button-group">
@@ -10,7 +10,7 @@
           <button class="custom-button register-btn" [routerLink]="['/auth/register']">Registro</button>
         </div>
       </div>
-      <h3>Bienvenido a papeleria</h3>
+      <h3>Bienvenido Desarrollador</h3>
       <div class="form-group">
         <input type="text" id="email" placeholder="Correo" />
       </div>
