--- a/src/app/pages/auth/home/home.component.css
+++ b/src/app/pages/auth/home/home.component.css
@@ -1,6 +1,6 @@
 /* Fondo */
 .login-container {
-  background: url('/assets/fondo.jpg') no-repeat center center fixed;
+  background: url('/assets/Fondo2.png') no-repeat center center fixed;
   background-size: cover;
   height: 100vh;
   display: flex;
@@ -77,7 +77,7 @@
 
 .register-text a {
   font-weight: bold;
-  color: #1F2937;
+  color: #eb0b0be7;
   text-decoration: none;
 }
 
